# plist_ffi-forked

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: main.yml
cpp/examples/: CMakeLists.txt  Info.plist  plist_test.cpp
cpp/include/plist/: Integer.h  plist++.h
cpp/src/: Array.cpp  Boolean.cpp  Date.cpp  Dictionary.cpp  Integer.cpp  Key.cpp  Node.cpp  Real.cpp  String.cpp  Structure.cpp  Uid.cpp
src/: creation.rs  dict.rs  getters.rs  lib.rs
