[package]
name = "plist_ffi"
version = "0.1.5"
edition = "2024"
description = "C FFI for the amazing plist crate, compatible with libplist"
authors = ["Jackson Coxson"]
license = "MIT"
documentation = "https://docs.rs/plist_ffi"
repository = "https://github.com/jkcoxson/plist_ffi"
keywords = ["plist", "apple"]


[dependencies]
plist = { version = "1.7" }
serde_json = { version = "1" }
libc = { version = "0.2" }

[build-dependencies]
cbindgen = { version = "0.29" }
cc = { version = "1.2" }

[features]
danger = []
default = ["danger"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[package.metadata.docs.rs]
all-features = true
